--- a/EtAlii.CryptoMagic.Tests/EtAlii.CryptoMagic.Tests.csproj
+++ b/EtAlii.CryptoMagic.Tests/EtAlii.CryptoMagic.Tests.csproj
@@ -3,5 +3,21 @@
   <ItemGroup>
     <ProjectReference Include="..\EtAlii.CryptoMagic\EtAlii.CryptoMagic.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Update="xunit" Version="2.4.2" />
+    <PackageReference Update="xunit.runner.visualstudio" Version="2.4.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="Nerdbank.GitVersioning">
+      <Version>3.5.109</Version>
+    </PackageReference>
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.3.0" />
+    <PackageReference Update="Coverlet.Collector" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 
 </Project>
